--- a/addons/music_manager/views/music_manager_genre_views.xml
+++ b/addons/music_manager/views/music_manager_genre_views.xml
@@ -24,7 +24,7 @@
                     <field name="name" string="Name"/>
                     <field name="track_amount" string="Track amount"/>
                     <field name="disk_amount" string="Disk amount"/>
-                    <field name="create_uid" string="Added by"/>
+                    <field name="owner" string="Added by"/>
                     <field name="create_date" string="Create date" groups="music_manager.group_music_manager_user_admin"/>
                     <field name="write_date" string="Last update" groups="music_manager.group_music_manager_user_admin"/>
                 </tree>
@@ -40,6 +40,9 @@
                     <sheet>
                         <div class="d-flex flex-column justify-content-between w-100 genre-form-title">
                             <h1 class="big-title"><field name="name"/></h1>
+                            <group class="w-25">
+                                <field name="owner" string="Owner" readonly="False" groups="music_manager.group_music_manager_user_admin"/>
+                            </group>
                             <button name="update_songs" string="Update metadata" class="btn-outline-primary w-25" type="object"/>
                         </div>
                         <separator/>
@@ -54,7 +57,7 @@
                                         <field name="disk_amount" string="Disk amount" optional="hide"/>
                                         <field name="genre_id" string="Genre"/>
                                         <field name="year" string="Year"/>
-                                        <field name="create_uid" string="Owner" groups="music_manager.group_music_manager_user_admin"/>
+                                        <field name="owner" string="Owner" groups="music_manager.group_music_manager_user_admin"/>
                                         <field name="create_date" string="Create date" groups="music_manager.group_music_manager_user_admin"/>
                                         <field name="write_date" string="Last update" groups="music_manager.group_music_manager_user_admin"/>
                                     </tree>
@@ -72,7 +75,7 @@
                                         <field name="duration" string="Duration"/>
                                         <field name="is_saved" column_invisible="True"/>
                                         <field name="is_deleted" column_invisible="True"/>
-                                        <field name="create_uid" string="Owner" groups="music_manager.group_music_manager_user_admin"/>
+                                        <field name="owner" string="Owner" groups="music_manager.group_music_manager_user_admin"/>
                                         <field name="create_date" string="Create date" groups="music_manager.group_music_manager_user_admin"/>
                                         <field name="write_date" string="Last update" groups="music_manager.group_music_manager_user_admin"/>
                                     </tree>
