--- a/addons/music_manager/views/music_manager_track_views.xml
+++ b/addons/music_manager/views/music_manager_track_views.xml
@@ -82,14 +82,14 @@
                                         <div class="d-flex flex-row justify-content-around">
                                             <div class="d-flex flex-column align-items-center mx-3">
                                                 <div class="mb-3">
-                                                    <img src="music_manager/static/src/img/update-img.png" width="300" height="300"/>
+                                                    <img src="music_manager/static/src/img/update-img.png" width="300" height="300" alt="Cloud image"/>
                                                 </div>
                                                 <p class="mx-auto"><b>MP3 file</b></p>
                                                 <field name="file" string="MP3 file"/>
                                             </div>
                                             <div class="d-flex flex-column justify-content-center">
                                                 <div class="mb-3">
-                                                    <img src="music_manager/static/src/img/youtube-img.png" width="300" height="300"/>
+                                                    <img src="music_manager/static/src/img/youtube-img.png" width="300" height="300" alt="YouTubeimage"/>
                                                 </div>
                                                 <p class="mx-auto"><b>YouTube URL</b></p>
                                                 <field name="url" placeholder="https://"/>
